--- a/src/modulo-04-c-sharp/dia-02/LinqELambda/ConsoleApplication1/DbFuncionarios.csproj
+++ b/src/modulo-04-c-sharp/dia-02/LinqELambda/ConsoleApplication1/DbFuncionarios.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cargo.cs" />
-    <Compile Include="DbFuncionarios.cs" />
+    <Compile Include="BaseDeDados.cs" />
     <Compile Include="Funcionario.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
