feat(opcoes): implementar opções 3, 4 e 5.

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Dominio/Locadora.Dominio.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Dominio/Locadora.Dominio.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseDeDados.cs" />
+    <Compile Include="Categoria.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="LocadoraElement.cs" />
     <Compile Include="Jogo.cs" />
