--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Dominio/Locadora.Dominio.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Dominio/Locadora.Dominio.csproj
@@ -47,6 +47,7 @@
     <Compile Include="LocadoraElement.cs" />
     <Compile Include="Jogo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Relatorio.cs" />
     <Compile Include="Teclado.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
