feat(cliente e csv): implmenetar pesquisa de clientes por nome e importar dados csv

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Dominio/Locadora.Dominio.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Dominio/Locadora.Dominio.csproj
@@ -36,13 +36,14 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseDeDados.cs" />
     <Compile Include="Categoria.cs" />
     <Compile Include="Cliente.cs" />
+    <Compile Include="Csv.cs" />
+    <Compile Include="ImportaJogo.cs" />
     <Compile Include="Locacao.cs" />
     <Compile Include="LocadoraElement.cs" />
     <Compile Include="Jogo.cs" />
