test(testes): testar classes cliente e jogo

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.DominioTests/Locadora.DominioTests.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.DominioTests/Locadora.DominioTests.csproj
@@ -54,6 +54,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BaseDeDadosTests.cs" />
+    <Compile Include="ClienteTests.cs" />
+    <Compile Include="JogoTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
