style(Views): estilizar

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Web.config
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="LOCADORA" connectionString="Server=NB-002667\SQLEXPRESS;Database=Locadora;User Id=sa;Password=Crescer$5;" />
+    <add name="LOCADORA" connectionString="Server=WAR-MACHINE\SQLEXPRESS;Database=Locadora_local;Trusted_connection=True;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
