--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Web.config
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Web.config
@@ -4,8 +4,13 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>  
   <connectionStrings>
-    <add name="LOCADORA" connectionString="Server=WAR-MACHINE\SQLEXPRESS;Database=Locadora_local;Trusted_connection=True;" />
+    <add name="LOCADORA" connectionString="Server=NB-002667\SQLEXPRESS;Database=Locadora;User Id=sa;Password=Crescer$5;providerName=System.Data.SQLClient;" />
+    <add name="LOCADORA_EF" connectionString="Server=NB-002667\SQLEXPRESS;Database=Locadora_cf;User Id=sa;Password=Crescer$5;" providerName="System.Data.SQLClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -43,4 +48,10 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
