--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Repositorio.CodeFirst/Locadora.Repositorio.EF.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Repositorio.CodeFirst/Locadora.Repositorio.EF.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{08C270A3-DA2B-4ED9-8BBA-04EB0B6507F8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Locadora.Repositorio.CodeFirst</RootNamespace>
-    <AssemblyName>Locadora.Repositorio.CodeFirst</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <RootNamespace>Locadora.Repositorio.EF</RootNamespace>
+    <AssemblyName>Locadora.Repositorio.EF</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,9 +51,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BancoDeDados.cs" />
+    <Compile Include="JogoRepositorio.cs" />
     <Compile Include="Migrations\201511091909533_initial.cs" />
     <Compile Include="Migrations\201511091909533_initial.Designer.cs">
       <DependentUpon>201511091909533_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201511100113064_initial.cs" />
+    <Compile Include="Migrations\201511100113064_initial.Designer.cs">
+      <DependentUpon>201511100113064_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -70,6 +76,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201511091909533_initial.resx">
       <DependentUpon>201511091909533_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511100113064_initial.resx">
+      <DependentUpon>201511100113064_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
