--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Repositorio.CodeFirst/Locadora.Repositorio.EF.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Repositorio.CodeFirst/Locadora.Repositorio.EF.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BancoDeDados.cs" />
+    <Compile Include="ClienteRepositorio.cs" />
     <Compile Include="JogoRepositorio.cs" />
     <Compile Include="Migrations\201511091909533_initial.cs" />
     <Compile Include="Migrations\201511091909533_initial.Designer.cs">
