test(Dominio): testar Cliente e complementar testes de Jogo

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Dominio.Test/Locadora.Dominio.Test.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Dominio.Test/Locadora.Dominio.Test.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ClienteTest.cs" />
     <Compile Include="JogoTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
