--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Locadora.Web.MVC.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Locadora.Web.MVC.csproj
@@ -148,7 +148,9 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\JogoController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\RelatorioController.cs" />
+    <Compile Include="Segurança\Filters\Autorizador.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -156,6 +158,7 @@
     <Compile Include="Models\JogoModel.cs" />
     <Compile Include="Models\ManterJogoModel.cs" />
     <Compile Include="Models\RelatorioModel.cs" />
+    <Compile Include="Segurança\Models\UsuarioLogadoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -173,6 +176,7 @@
     <Content Include="Views\Jogo\Manter.cshtml" />
     <Content Include="Views\Shared\_ImagemCategoria.cshtml" />
     <Content Include="Views\Shared\_CelulaJogo.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
