--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Dominio/Locadora.Dominio.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Dominio/Locadora.Dominio.csproj
@@ -45,10 +45,14 @@
     <Compile Include="Cliente.cs" />
     <Compile Include="EntidadeBase.cs" />
     <Compile Include="Jogo.cs" />
+    <Compile Include="Permissao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorio\IClienteRepositorio.cs" />
     <Compile Include="Repositorio\IJogoRepositorio.cs" />
+    <Compile Include="Repositorio\IUsuarioRepositorio.cs" />
     <Compile Include="Selo.cs" />
+    <Compile Include="Servicos\ServicoAutenticacao.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
