--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Web.config
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Web.config
@@ -10,7 +10,7 @@
   </configSections>  
   <connectionStrings>
     <add name="LOCADORA" connectionString="Server=NB-002667\SQLEXPRESS;Database=Locadora;User Id=sa;Password=Crescer$5;providerName=System.Data.SQLClient;" />
-    <add name="LOCADORA_EF" connectionString="Server=NB-002667\SQLEXPRESS;Database=Locadora_cf;User Id=sa;Password=Crescer$5;" providerName="System.Data.SQLClient" />
+    <add name="LOCADORA_EF" connectionString="Server=NB-002667\SQLEXPRESS;Database=Locadora_ef4;User Id=sa;Password=Crescer$5;" providerName="System.Data.SQLClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -21,6 +21,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Login/Index" timeout="30"></forms>
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
