--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Repositorio.CodeFirst/Locadora.Repositorio.EF.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Repositorio.CodeFirst/Locadora.Repositorio.EF.csproj
@@ -63,6 +63,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Servicos\ServicoCriptografia.cs" />
     <Compile Include="UsuarioRepositorio.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -80,6 +81,7 @@
       <DependentUpon>201511110244275_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
