--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.DominioTests2/Locadora.DominioTests2.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.DominioTests2/Locadora.DominioTests2.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{95485B57-0600-4BEF-B066-8FC990E17188}</ProjectGuid>
+    <ProjectGuid>{3B637935-8EB2-4492-BB4E-BAF15AB244EA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Locadora.Dominio.Test</RootNamespace>
-    <AssemblyName>Locadora.Dominio.Test</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <RootNamespace>Locadora.DominioTests2</RootNamespace>
+    <AssemblyName>Locadora.DominioTests2</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -16,6 +16,7 @@
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,20 +51,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="ClienteTest.cs" />
-    <Compile Include="JogoTest.cs" />
-    <Compile Include="Mocks\ServicoCriptografiaMock.cs" />
-    <Compile Include="Mocks\UsuarioRepositorioMock.cs" />
-    <Compile Include="PermissaoTest.cs" />
+    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServicoAutenticacaoTest.cs" />
-    <Compile Include="UsuarioTest.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Locadora.Dominio\Locadora.Dominio.csproj">
-      <Project>{93d95d00-78c7-4b77-be44-686ab7a29c7c}</Project>
-      <Name>Locadora.Dominio</Name>
-    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
