--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Repositorio.EFTests/Locadora.Repositorio.EFTests.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Repositorio.EFTests/Locadora.Repositorio.EFTests.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{95485B57-0600-4BEF-B066-8FC990E17188}</ProjectGuid>
+    <ProjectGuid>{397A49FE-5BCC-4FB5-9958-51509A69207F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Locadora.Dominio.Test</RootNamespace>
-    <AssemblyName>Locadora.Dominio.Test</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <RootNamespace>Locadora.Repositorio.EFTests</RootNamespace>
+    <AssemblyName>Locadora.Repositorio.EFTests</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -16,6 +16,7 @@
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,19 +51,13 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="ClienteTest.cs" />
-    <Compile Include="JogoTest.cs" />
-    <Compile Include="Mocks\ServicoCriptografiaMock.cs" />
-    <Compile Include="Mocks\UsuarioRepositorioMock.cs" />
-    <Compile Include="PermissaoTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServicoAutenticacaoTest.cs" />
-    <Compile Include="UsuarioTest.cs" />
+    <Compile Include="Servicos\ServicoCriptografiaTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Locadora.Dominio\Locadora.Dominio.csproj">
-      <Project>{93d95d00-78c7-4b77-be44-686ab7a29c7c}</Project>
-      <Name>Locadora.Dominio</Name>
+    <ProjectReference Include="..\Locadora.Repositorio.CodeFirst\Locadora.Repositorio.EF.csproj">
+      <Project>{08C270A3-DA2B-4ED9-8BBA-04EB0B6507F8}</Project>
+      <Name>Locadora.Repositorio.EF</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
