--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Locadora.Web.MVC.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Locadora.Web.MVC.csproj
@@ -168,7 +168,7 @@
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Shared\_LayoutLogin.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -180,6 +180,7 @@
     <Content Include="Views\Shared\_ImagemCategoria.cshtml" />
     <Content Include="Views\Shared\_CelulaJogo.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
