--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Infraestrutura.Servicos/Locadora.Infraestrutura.Servicos.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Infraestrutura.Servicos/Locadora.Infraestrutura.Servicos.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{08C270A3-DA2B-4ED9-8BBA-04EB0B6507F8}</ProjectGuid>
+    <ProjectGuid>{0DB0507B-09C5-4330-9A86-E0BAB121F704}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Locadora.Repositorio.EF</RootNamespace>
-    <AssemblyName>Locadora.Repositorio.EF</AssemblyName>
+    <RootNamespace>Locadora.Infraestrutura.Servicos</RootNamespace>
+    <AssemblyName>Locadora.Infraestrutura.Servicos</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,16 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,36 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BancoDeDados.cs" />
-    <Compile Include="ClienteRepositorio.cs" />
-    <Compile Include="JogoRepositorio.cs" />
-    <Compile Include="Mapping\ClienteMap.cs" />
-    <Compile Include="Mapping\SeloMap.cs" />
-    <Compile Include="Mapping\JogoMap.cs" />
-    <Compile Include="Mapping\PermissaoMap.cs" />
-    <Compile Include="Mapping\UsuarioMap.cs" />
-    <Compile Include="Migrations\201511112047269_initial.cs" />
-    <Compile Include="Migrations\201511112047269_initial.Designer.cs">
-      <DependentUpon>201511112047269_initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UsuarioRepositorio.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
+    <Compile Include="ServicoCriptografia.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Locadora.Dominio\Locadora.Dominio.csproj">
       <Project>{93d95d00-78c7-4b77-be44-686ab7a29c7c}</Project>
       <Name>Locadora.Dominio</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201511112047269_initial.resx">
-      <DependentUpon>201511112047269_initial.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
