--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Dominio/Locadora.Dominio.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Dominio/Locadora.Dominio.csproj
@@ -45,8 +45,10 @@
     <Compile Include="Cliente.cs" />
     <Compile Include="EntidadeBase.cs" />
     <Compile Include="Jogo.cs" />
+    <Compile Include="Locacao.cs" />
     <Compile Include="Permissao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorio\ILocacaoRepositorio.cs" />
     <Compile Include="Repositorio\IClienteRepositorio.cs" />
     <Compile Include="Repositorio\ISeloRepositorio.cs" />
     <Compile Include="Repositorio\IJogoRepositorio.cs" />
@@ -55,6 +57,7 @@
     <Compile Include="Servicos\IServicoCriptografia.cs" />
     <Compile Include="Servicos\ServicoAutenticacao.cs" />
     <Compile Include="Servicos\ServicoLocacao.cs" />
+    <Compile Include="Situacao.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
