--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Repositorio.CodeFirst/Locadora.Repositorio.EF.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Repositorio.CodeFirst/Locadora.Repositorio.EF.csproj
@@ -51,9 +51,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BancoDeDados.cs" />
-    <Compile Include="Migrations\201511120257239_initial.cs" />
-    <Compile Include="Migrations\201511120257239_initial.Designer.cs">
-      <DependentUpon>201511120257239_initial.cs</DependentUpon>
+    <Compile Include="Mapping\LocacaoMap.cs" />
+    <Compile Include="Migrations\201511121915346_initial.cs" />
+    <Compile Include="Migrations\201511121915346_initial.Designer.cs">
+      <DependentUpon>201511121915346_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="SeloRepositorio.cs" />
     <Compile Include="ClienteRepositorio.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Mapping\UsuarioMap.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LocacaoRepositorio.cs" />
     <Compile Include="UsuarioRepositorio.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -78,8 +80,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201511120257239_initial.resx">
-      <DependentUpon>201511120257239_initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201511121915346_initial.resx">
+      <DependentUpon>201511121915346_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
