--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Locadora.Web.MVC.csproj
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Locadora.Web.MVC.csproj
@@ -149,12 +149,14 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\DevolucaoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\JogoController.cs" />
     <Compile Include="Controllers\LocacaoController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\RelatorioController.cs" />
     <Compile Include="Helpers\FabricaDeModulos.cs" />
+    <Compile Include="Models\DevolucaoModel.cs" />
     <Compile Include="Models\LocacaoModel.cs" />
     <Compile Include="Segurança\ControleDeSessao.cs" />
     <Compile Include="Segurança\Filters\Autorizador.cs" />
@@ -188,6 +190,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Locacao\Locacao.cshtml" />
     <Content Include="Views\Shared\_PreviewLocacao.cshtml" />
+    <Content Include="Views\Devolucao\Devolucao.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
